# tbk-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  COPYING.md  LICENSE.md  README.md  compose.dev.yaml  compose.prod.yaml
.github/workflows/: ci.yml
assets/: PARENTS.md
assets/parents/: Elterninformation.txt
backend/: .env.example  config.example.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  auth.py  config.py  fracture.py  main.py  models.py  qr.py  queue.py  state.py  utils.py
backend/app/api/: __init__.py  admin.py  auth.py  carousel.py  cases.py  config.py  fracture.py  review.py  worker.py
backend/app/storage/: __init__.py  base.py  factory.py
doc/: admins.md  doctors.md  organizers.md  tech.md  teddy-app.service
docker/: backend.dev.Dockerfile  backend.prod.Dockerfile  frontend.dev.Dockerfile  frontend.prod.Dockerfile
frontend/: package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json
frontend/src/: app.css
frontend/src/lib/: api.ts  auth.ts  camera.ts  (+4 more)
frontend/tests/: e2e.spec.ts
nginx/: nginx.conf.template
runner/: core.py  dummy.py  dummy_runner.py  pyproject.toml  requirements-chroma.txt  runner.py
runner/assets/: README.md
runner/src/runner/: __init__.py  chroma.py  core.py  dummy.py  runner.py
runner/tests/: test_runner.py
tests/: conftest.py  test_admin_qr.py  test_auth.py  test_fracture.py  test_local_storage_provider.py  test_parents_assets.py  test_queue_worker.py  test_readme_template.py  test_review_and_carousel.py  test_seafile_provider.py
(+19 files in other folders)
